--- a/20160106_全日制第一周第一天/js第一天/3、预解释.html
+++ b/20160106_全日制第一周第一天/js第一天/3、预解释.html
@@ -22,15 +22,18 @@
     sum(100, 200);//->300
     //预解释只发生在当前作用域下。例如：上面的代码在全局作用域下JS执行之前，只是把sum声明+定义了，而sum函数体中我们看到的var total都还是一些"代码字符串"而已，此时是不进行预解释的(只有在函数执行的时候才会预解释)
 
+    //（周末班上课添加）在全局作用域中声明的变量叫做全局变量-->不仅是全局变量，在全局作用域下声明的变量也相当于给window增加了属性名，例如：
+
 
     //1、什么是预解释?
     //预解释：在当前作用域下，JS代码执行之前，首先会把带var/function关键字的进行提前的声明或者定义
     //声明 declare: var obj1; ->就是告诉浏览器我有一个全局的变量obj1啦  ->只声明一个变量还没有赋值的时候我们的默认值是undefined
     //定义 defined: obj1 = xxxfff000; ->就是给声明后的变量赋值
+    //（定义就是赋值。）
 
     //2、预解释是如何的操作的?
     //带var关键字的在预解释阶段只完成了提前的声明
-    //带function关键字的在预解释阶段完成了声明和定义两个操作
+    //带function关键字的在预解释阶段完成了声明和定义(赋值)两个操作
 
     //关于浏览器中的一些知识点
     //1、当浏览器加载我们页面内的时候首先会提供一个供JS代码执行的环境->全局作用域(window)
@@ -55,6 +58,23 @@
     //1)在私有作用域中声明过的变量(在函数体中带var的)
     //2)形参变量也是函数的私有的变量
     //->在函数体中看一个变量是否为私有的,首先看它是否为形参，然后在看是否带var，如果两者有其一就是私有的，否则就不是私有的
+
+
+//-----------------------------------------------------------------------------------------------------------------------------------
+    //（周末班讲课）
+
+    // 一个函数执行的操作：
+    //1)当函数执行的时候，首先会形成一个新的私有作用域，作用有两个：
+    //->让函数体中存储的字符串变为js代码执行
+    //->保护函数体中的私有的变量不受外界的影响（外面不能获取也不能修改），我们把函数的这个保护机制叫做“闭包”
+    //2）给形参赋值
+    //3）私有作用域下的预解释
+    //4）让之前存储的代码字符串变为JS代码从上到下执行
+
+    //函数中私有变量有且只有两种:
+    //1）函数的形参都是私有变量
+    //2）在函数中预解释的时候声明过的变量
+
 
 
 </script>
