--- a/20160107_全日制第一周第二天/2、预解释的注意点.html
+++ b/20160107_全日制第一周第二天/2、预解释的注意点.html
@@ -75,10 +75,18 @@
     //    fn();//->2
     //    function fn(){console.log(1);}
     //    fn();//->2
-    //    var fn=13;//->fn=13
-    //    fn();//->13() 报错
+    //    var fn=13;//->fn=13 //在预解释阶段只是声明，还少赋值这一步  fn=13；
+    //    fn();//->13() //报错   下面的代码就不执行了
     //    function fn(){console.log(2);}
     //    fn();
+
+    //----------------------------------------------------------------------------------------------------------------
+    //（周末班笔记）
+    //window是一个对象，属性名不能重复，也就是如果变量的名字和函数的名字一样了，也算是冲突了，只能保留一个值（不管是函数名
+    // 还是变量名都是一个名字，用来存储不同类型值的，但是在js中一个名字一次只能存储一个值）
+
+
+
 </script>
 </body>
 </html>
