--- a/20160107_全日制第一周第二天/5、内存释放.html
+++ b/20160107_全日制第一周第二天/5、内存释放.html
@@ -7,8 +7,7 @@
 <body>
 <script type="text/javascript">
     //1、i++ / ++i 的区别?
-    //两者都是在自身的基础上累加1，但是在和其他的值进行运算的时候，顺序是不一样的
-    //n+(i++) ->先n+i算出结果，完成后i在+1
+    //两者都是在自身的基础上累加1，但是在和其他的值进行运算的时候，顺序是不一样的    //n+(i++) ->先n+i算出结果，完成后i在+1
     //n+(++i) ->先i+1，把累加后的i的值在和n进行计算
 
     //var i = 10;
@@ -34,7 +33,8 @@
     //    objTwo = null;
 
     //    function fn(){}
-    //    fn=null;
+    //    fn=null;   //null空指针对象，不指向任何一个空间，之前的那个堆内存就没有被占用了，浏览器
+    // 在空闲休息的时候就会把他销毁。
 
     //[栈内存] ->作用域,用来执行JS代码的
     //全局作用域window ->当浏览器加载页面的时候形成全局的作用域，只有当前HTML页面关闭的时候全局作用域才销毁,只要当前页面不关闭,我们的全局作用域就不销毁("不销毁的作用域")->说明了在里面定义的全局变量的值也是不销毁的
