--- a/20160107_全日制第一周第二天/6、综合练习题1.html
+++ b/20160107_全日制第一周第二天/6、综合练习题1.html
@@ -16,7 +16,7 @@
     //    f(15);//->26
     //    f(20);//->32
     //    f(30);//->43
-    //    fn()(15);//->26
+    //    fn()(15);//->26    先让fn执行，返回一个小的函数地址没紧接着让小的函数执行没传递15；-->26
     //    fn()(20);//->31
     //    fn()(30);//->41
 
