一月十四号

--- a/20160107_全日制第一周第二天/1、练习题.html
+++ b/20160107_全日制第一周第二天/1、练习题.html
@@ -14,8 +14,8 @@
         return ary;
     }
     var res = fn(ary);
-    console.log(ary);
-    console.log(res);
+    console.log(ary);//-->[0,2,3,4]
+    console.log(res);//-->100
 </script>
 </body>
 </html>
